crates/wac-parser/tests/resolution/fail/mismatched-record-field-type.wac
import x: interface {
    record r {
        a: u8,
        b: string,
        c: u32,
    }
};

let i = new foo:bar { x };
